# MyProjects

./: README.md
cmdb/: .gitignore  README  README.md  README.rst  afcat_client.py  db.sqlite3  db2.sqlite3  readme.txt  requirements  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cmdb/afcat/: __init__.py  manage.py  settings.py  urls.py  wsgi.py
cmdb/afcat/account/: admin.py  apps.py  models.py  urls.py  views.py
cmdb/afcat/api/: apps.py  cmdb_views.py  tracker_views.py  urls.py  views.py
cmdb/afcat/api/libs/: menu.py  (+6 more)
cmdb/afcat/cmdb/: __init__.py  admin.py  apps.py  custmanage.py  models.py  settings.py  tests.py  urls.py  views.py
cmdb/afcat/dbinit/: initdb.sql
cmdb/afcat/fixtures/: cmdb_20161215181926.json  cmdb_20161227145356.json  cmdb_20161228145712.json  cmdb_20161229150109.json  cmdb_20161229174520.json  cmdb_20170116113332.json  cmdb_20170207142829.json  cmdb_20170315134946.json
cmdb/afcat/monitor/: admin.py  apps.py  hosts.py  models.py  models2.py  sql_parse.py  tests.py  urls.py  views.py
cmdb/afcat/templates/: 400.html  403.html  404.html  500.html
cmdb/afcat/tracker/: apps.py  models.py  urls.py  views.py
cmdb/client/conf/: settings.py
cmdb/client/core/: HouseStark.py  api_token.py  info_collection.py
cmdb/client/plugins/: plugin_api.py
cmdb/cmdb/: settings.py  urls.py
cmdb/doc/: CMDB_v2_demand_process.xlsx  IP_Management.xlsx  cmdb_api
cmdb/serverapi/: apps.py  configasset.py  models.py  urls.py  views.py
cmdb/serverapi/conf/: collectmodule.py
cmdb/serverapi/migrations/: 0001_initial.py
cmdb/web/: models.py
(+452 files in other folders)
