[metadata]
name = cloud
Version: 2.0.0
summary = Cloud computing fabric controller
description-file =
    README.rst
author = YaLain
author-email = zengchunyun@afcat.com.cn
home-page = http://www.afcat.com.cn/
classifier =
    Environment :: DJANGO_SETTINGS_MODULE
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    afcat

[entry_points]
console_scripts =
    afcat_client = afcat.manage:main


[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0


[wheel]
universal = 1

[pbr]
# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
